testsuite/tests/typing-recmod/t04bad.compilers.reference
File "t04bad.ml", line 10, characters 15-41:
Error: The definition of A.t contains a cycle:
       int * A.t
